; ModuleID = '/home/carl/AnghaBench/libgit2/tests/commit/extr_commit.c_test_commit_commit__summary.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/commit/extr_commit.c_test_commit_commit__summary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"One-liner with no trailing newline\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"One-liner with trailing newline\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"One-liner with trailing newline\0A\00", align 1
@.str.3 = private unnamed_addr constant [34 x i8] c"Trimmed leading&trailing newlines\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c"\0A\0ATrimmed leading&trailing newlines\0A\0A\00", align 1
@.str.5 = private unnamed_addr constant [21 x i8] c"First paragraph only\00", align 1
@.str.6 = private unnamed_addr constant [41 x i8] c"\0AFirst paragraph only\0A\0A(There are more!)\00", align 1
@.str.7 = private unnamed_addr constant [47 x i8] c"First paragraph with  unwrapped trailing\09lines\00", align 1
@.str.8 = private unnamed_addr constant [67 x i8] c"\0AFirst paragraph\0Awith  unwrapped\0Atrailing\09lines\0A\0A(Yes, unwrapped!)\00", align 1
@.str.9 = private unnamed_addr constant [14 x i8] c"\09Leading tabs\00", align 1
@.str.10 = private unnamed_addr constant [30 x i8] c"\09Leading\0A\09tabs\0A\0Aare preserved\00", align 1
@.str.11 = private unnamed_addr constant [16 x i8] c" Leading Spaces\00", align 1
@.str.12 = private unnamed_addr constant [32 x i8] c" Leading\0A Spaces\0A\0Aare preserved\00", align 1
@.str.13 = private unnamed_addr constant [26 x i8] c"Trailing tabs\09are removed\00", align 1
@.str.14 = private unnamed_addr constant [28 x i8] c"Trailing tabs\09are removed\09\09\00", align 1
@.str.15 = private unnamed_addr constant [29 x i8] c"Trailing spaces  are removed\00", align 1
@.str.16 = private unnamed_addr constant [31 x i8] c"Trailing spaces  are removed  \00", align 1
@.str.17 = private unnamed_addr constant [14 x i8] c"Trailing tabs\00", align 1
@.str.18 = private unnamed_addr constant [28 x i8] c"Trailing tabs\09\0A\0Aare removed\00", align 1
@.str.19 = private unnamed_addr constant [16 x i8] c"Trailing spaces\00", align 1
@.str.20 = private unnamed_addr constant [30 x i8] c"Trailing spaces \0A\0Aare removed\00", align 1
@.str.21 = private unnamed_addr constant [32 x i8] c"Newlines are replaced by spaces\00", align 1
@.str.22 = private unnamed_addr constant [33 x i8] c"Newlines\0Aare\0Areplaced by spaces\0A\00", align 1
@.str.23 = private unnamed_addr constant [38 x i8] c"  Spaces after newlines are collapsed\00", align 1
@.str.24 = private unnamed_addr constant [46 x i8] c"\0A  Spaces after newlines\0A  are\0A  collapsed\0A  \00", align 1
@.str.25 = private unnamed_addr constant [38 x i8] c" Spaces before newlines are collapsed\00", align 1
@.str.26 = private unnamed_addr constant [47 x i8] c"  \0ASpaces before newlines  \0Aare  \0Acollapsed  \0A\00", align 1
@.str.27 = private unnamed_addr constant [38 x i8] c" Spaces around newlines are collapsed\00", align 1
@.str.28 = private unnamed_addr constant [55 x i8] c"  \0A  Spaces around newlines  \0A  are  \0A  collapsed  \0A  \00", align 1
@.str.29 = private unnamed_addr constant [23 x i8] c" Trailing newlines are\00", align 1
@.str.30 = private unnamed_addr constant [51 x i8] c"  \0A  Trailing newlines  \0A  are  \0A\0A  collapsed  \0A  \00", align 1
@.str.31 = private unnamed_addr constant [30 x i8] c" Trailing spaces are stripped\00", align 1
@.str.32 = private unnamed_addr constant [46 x i8] c"  \0A  Trailing spaces \0A  are stripped \0A\0A  \0A \09 \00", align 1
@.str.33 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.34 = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.35 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.36 = private unnamed_addr constant [4 x i8] c"\0A \0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_commit_commit__summary() #0 {
  %1 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  %3 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  %4 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.6, i64 0, i64 0))
  %5 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.8, i64 0, i64 0))
  %6 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.10, i64 0, i64 0))
  %7 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.12, i64 0, i64 0))
  %8 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.14, i64 0, i64 0))
  %9 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.15, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.16, i64 0, i64 0))
  %10 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.17, i64 0, i64 0), i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.18, i64 0, i64 0))
  %11 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.20, i64 0, i64 0))
  %12 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.21, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.22, i64 0, i64 0))
  %13 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.23, i64 0, i64 0), i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.24, i64 0, i64 0))
  %14 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.25, i64 0, i64 0), i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.26, i64 0, i64 0))
  %15 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.27, i64 0, i64 0), i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.28, i64 0, i64 0))
  %16 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.29, i64 0, i64 0), i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.30, i64 0, i64 0))
  %17 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.31, i64 0, i64 0), i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.32, i64 0, i64 0))
  %18 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.33, i64 0, i64 0))
  %19 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.34, i64 0, i64 0))
  %20 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.35, i64 0, i64 0))
  %21 = call i32 @assert_commit_summary(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.33, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.36, i64 0, i64 0))
  ret void
}

declare dso_local i32 @assert_commit_summary(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
